# fastapi-tutorial

./: .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/postgres/: Dockerfile  postgresql.conf
src/: .env.example  logger.py  main.py
src/connector/: db_connect.py
src/controllers/: auth.py  user.py
src/database/migrations/: README  alembic.ini  env.py
src/database/migrations/versions/: 20240505144829_create_users_table.py  20240505152314_create_users_table.py  20240601192235_craete_users_table.py  20240604004118_create_users_table.py  20240604233829_create_users_table.py  20240604234844_create_user_social_accounts_table.py  20240606224911_modify_users_table.py
src/database/seeders/: user.py
src/exceptions/: conflict_exception.py  custom_validation_exception.py  exception_handlers.py  generic_exception.py  not_found_exception.py  validation_exception.py
src/middlewares/: authenticate.py  log.py
src/models/: user.py  user_social_account.py
src/repositories/: base.py  user.py
src/routes/: auth.py  user.py
src/services/: auth.py  base.py  user.py
src/settings/: app.py  db.py  logger.py
src/utils/: environment.py  hash.py
