[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.10.0"
alembic = "^1.13.1"
pymysql = "^1.1.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.29"
cryptography = "^42.0.6"
sqlmodel = "^0.0.18"
passlib = "^1.7.4"
types-passlib = "^1.7.7.20240327"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
